# price-spy

./: .deepsource.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  GEMINI.md  LICENSE  README.md  demo_screenshot.py  migrate_db.py  pyproject.toml  requirements.txt  setup.cfg  spy.py  test_email.py
.devcontainer/: devcontainer.json  docker-compose.dev.yml
app/: cli.py
data/: pricespy.db.backup_20260124_054856  pricespy.db.backup_20260124_070607  pricespy.db.bak  pricespy.db.bak_20260124_160758  pricespy.db.bak_20260130_172119  pricespy.db.bak_20260130_173534  pricespy.db.features_init.bak  pricespy.db.pre_cleanup.bak  pricespy.db.test_residue  pricespy_dump.sql
docs/: AI_EXTRACTION.md  CATEGORIES.md  CI.md  DATA_STRUCTURE.md  DEPLOYMENT_SETUP.md  LABELS.md  LOGGING.md  PRODUCTS.md  PRODUCT_VISION.md  PURCHASE_TYPES.md  RASPBERRY_PI_SETUP.md  ROADMAP.md  SPECS_EXTRACTION_ENGINE.md  STANDARDS.md  STORES.md  TRACKED_ITEMS.md  UNITS.md  USAGE_GUIDE.md  USER_GUIDE.md
infrastructure/: Dockerfile  docker-compose.yml
migrations/: 20260131_add_blocking_info_to_logs.sql
scripts/: check_docs_sync.sh  db_manager.py  debug_fingerprint.py  debug_levis.py  deploy.sh  diagnose_failures.py  migrate_003_add_product_profile.py  migrate_v2_deals.py  migrate_v4_profiles.py  run_docker_hook.sh  seed_real_deals.py  send_test_email.py  setup_hooks.sh  sync_prod_db.sh  verify_dashboard_warnings.py
specs/: 01_manual_spy.md  DOCKER_SETUP_PLAN.md  SLICE_10_PRICE_HISTORY_GRAPHS.md  SLICE_11_REFACTORING_PLAN.md  SLICE_12_FINAL_REFACTOR_AND_CLEANUP.md  SLICE_1_IMPLEMENTATION_PLAN.md  SLICE_2_IMPLEMENTATION_PLAN.md  SLICE_3_IMPLEMENTATION_PLAN.md  SLICE_4_IMPLEMENTATION_PLAN.md  SLICE_5_IMPLEMENTATION_PLAN.md  SLICE_6_IMPLEMENTATION_PLAN.md  SLICE_7_IMPLEMENTATION_PLAN.md  SLICE_8_DAILY_EMAIL_REPORT.md  (+1 more)
(+111 files in other folders)
