[project]
name = "price-spy"
version = "0.1.0"
description = "Visual-first price tracking system"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (Security)
    "N",      # pep8-naming
    "PL",     # Pylint
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "TRY",    # tryceratops
    "PERF",   # Perflint
    "FURB",   # refurb
    "ASYNC",  # flake8-async
    "PLC0414", # Useless import alias
    "D202",   # No blank lines after function docstring
    "ERA",    # eradicate (Commented out code)
]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915", "PLR0911"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
